--- a/views/game.html
+++ b/views/game.html
@@ -10,7 +10,7 @@
 		<section class="game__main">
 			<img data-ng-src="{{game.imageBig}}" error-Src="img/imageError_764x260.jpg">
 			<div class="game__main__details">
-				<p><span>" Lorem ipsum dolor sit amet, consectetur .."</span></p>
+				<p><span>" Lorem Ipsum dolor sit amet"</span></p>
 				<button type="button" data-ng-click="game.playGame()">Play</button>
 			</div>
 		</section>
