--- a/views/templates/header.tmpl.html
+++ b/views/templates/header.tmpl.html
@@ -2,7 +2,7 @@
     <header class="header" role="banner">
 	    <div class="header__logo">
 			<div class="header__title">
-			  Cool Title! 
+			  Fancy Title! 
 			</div>
 	    </div>
 	    <nav class="menu">
